# ink-contracts

./: README.md
ERC-20/deployer/: Cargo.toml  lib.rs
ERC-20/deployer/erc20/: Cargo.toml  lib.rs
PNS/pns/: Cargo.toml  lib.rs
cross-contract/: README.md
cross-contract/caller/: Cargo.toml  README.md  lib.rs
cross-contract/flipper/: README.md
flipper/: Cargo.toml
upgradeable-contract/method-1/proxy/: README.md  lib.rs
upgradeable-contract/update-code/proxy/: Cargo.toml
upgradeable-contract/upgrade-code/proxy/: README.md  lib.rs
