[package]
name = "deployer"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
erc20 = {path = "erc20" , default-features = false , features = ["ink-as-dependency"]}

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "erc20/std"
]
ink-as-dependency = []
e2e-tests = []
